# DenoX

./: .gitmodules  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/hellok/denox/denox/: DenoxPlugin.kt
android/src/test/kotlin/com/hellok/denox/denox/: DenoxPluginTest.kt
ios/: denox.podspec
ios/Classes/: DenoxPlugin.swift
lib/: denox.dart  denox_method_channel.dart  denox_platform_interface.dart  main.dart
lib/src/rust/: frb_generated.dart
linux/: CMakeLists.txt  denox_plugin.cc  denox_plugin_private.h
linux/include/denox/: denox_plugin.h
linux/test/: denox_plugin_test.cc
macos/: denox.podspec
macos/Classes/: DenoxPlugin.swift
rust/: Cargo.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_denox.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_denox.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt  denox_plugin.cpp  denox_plugin.h  denox_plugin_c_api.cpp
windows/include/denox/: denox_plugin_c_api.h
windows/test/: denox_plugin_test.cpp
