[package]
name = "rust_lib_denox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
deno_core = { path = "../modules/deno_core/core" }
tokio = { version = "1.41.1", features = ["full"] }
wtransport = { version = "0.5.0", features = ["quinn"] }
quinn = { version = "0.11.6", features = ["rustls"] }
surrealdb = { version = "2.1.2", default-features = false, features = ["kv-mem", "kv-surrealcs", "rustls"] }
cpal = "0.15.3"
symphonia = { path = "../modules/symphonia/symphonia", features = [ "all" ] }
image = { path = "../modules/image-rs" }